--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiocron==1.7
 aiormq==5.2.2
 anyio==3.3.0
 asgiref==3.4.1
+asttokens==2.0.5
+attrs==21.4.0
 backports.zoneinfo==0.2.1
 channel-box==0.2.3
 click==8.0.1
@@ -10,16 +12,25 @@ executing==0.8.1
 h11==0.12.0
 httptools==0.2.0
 idna==3.2
+iniconfig==1.1.1
 multidict==5.1.0
+packaging==21.3
 pamqp==3.0.1
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.0.1
 python-dateutil==2.8.2
 python-dotenv==0.19.0
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==5.4.1
 simple-print==1.5
 six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
 termcolor==1.1.0
+tomli==2.0.1
+tzdata==2021.5
 tzlocal==3.0
 uvicorn==0.15.0
 uvloop==0.16.0
